<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnTeacher"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:textColor="@color/ButtonTextColor"
            android:background="@color/colorPrimary"
            android:layout_marginBottom="10dp"
            android:text="@string/role1"/>

        <Button
            android:id="@+id/btnPrincipal"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:textColor="@color/ButtonTextColor"
            android:background="@color/colorPrimary"
            android:text="@string/role2"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linPassLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="invisible"
        android:orientation="horizontal"
        android:layout_weight="1">

        <EditText
            android:id="@+id/txtPassCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/pass_code"/>

        <Button
            android:id="@+id/btnPassSubmit"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:textColor="@color/ButtonTextColor"
            android:background="@color/colorPrimary"
            android:text="@string/btn_pass"/>

    </LinearLayout>

</LinearLayout>



